objects/Payroll_History__c.object
<CustomObject>
    <description>Object that stores analytic snapshots of weekly payroll information</description>
    <fields>
        <fullName>Actual_days_worked__c</fullName>
        <label>Actual #days worked</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ad_hoc_additional_payment__c</fullName>
        <label>Ad hoc additional payment</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ad_hoc_advance__c</fullName>
        <label>Ad hoc advance</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ad_hoc_advance_approved_by_Finance__c</fullName>
        <label>Ad hoc advance approved by Finance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_hoc_advance_collection_date__c</fullName>
        <label>Ad hoc advance collection date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advance_payment_date__c</fullName>
        <label>Advance payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorising_initial_ad_hoc_advance__c</fullName>
        <label>Authorising initial - ad hoc advance</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorising_initial_additional_payment__c</fullName>
        <label>Authorising initial - additional payment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorising_initial_override_daily_rate__c</fullName>
        <label>Authorising initial -override daily rate</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <label>Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_advance_paid_due_to_payroll_issue__c</fullName>
        <label>Date advance paid due to payroll issue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_withdrawal_notification__c</fullName>
        <label>Date of withdrawal notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_payroll_corrected__c</fullName>
        <label>Date payroll corrected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_staff_member_was_dismissed__c</fullName>
        <label>Date staff member was dismissed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_worked_when_dismissed__c</fullName>
        <label>Days worked when dismissed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_worked_when_withdrawn__c</fullName>
        <label>Days worked when withdrawn</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_salary__c</fullName>
        <label>Expected salary</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Application_ID__c</fullName>
        <label>Job Application ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Application__c</fullName>
        <label>Job Application #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <label>Job ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Placement_ID__c</fullName>
        <label>Job Placement ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Placement__c</fullName>
        <label>Job Placement #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Placement_record_type__c</fullName>
        <label>Job Placement record type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_placement_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job placement lookup</label>
        <referenceTo>Job_placement__c</referenceTo>
        <relationshipLabel>Payroll History</relationshipLabel>
        <relationshipName>Payroll_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_payroll_meeting_of_the_month__c</fullName>
        <label>Last payroll meeting of the month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Override_daily_rate__c</fullName>
        <label>Override daily rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payroll_Issue__c</fullName>
        <label>Payroll Issue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_advance_owed__c</fullName>
        <label>Payroll advance owed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payroll_approval_date_time__c</fullName>
        <label>Payroll approval date/time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payroll_approval_notes__c</fullName>
        <label>Payroll approval notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payroll_checking_notes__c</fullName>
        <label>Payroll checking notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payroll_issue_status__c</fullName>
        <label>Payroll issue status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_issue_status_last_update__c</fullName>
        <label>Payroll issue status last update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payroll_model__c</fullName>
        <label>Payroll model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No advance</fullName>
                </value>
                <value>
                    <fullName>70% advance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payroll_payment_date__c</fullName>
        <label>Payroll payment date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payroll_processing_meeting_date__c</fullName>
        <label>Payroll processing meeting date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_additional_payment__c</fullName>
        <label>Reason for additional payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_adhoc_advance__c</fullName>
        <label>Reason for adhoc advance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_employment__c</fullName>
        <label>Reason for employment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_of_overridden_daily_rate__c</fullName>
        <label>Reason of overridden daily rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <label>Record Type ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staffing_Associate__c</fullName>
        <label>Staffing Associate</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Standard_daily_rate__c</fullName>
        <label>Standard daily rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_owed__c</fullName>
        <label>Total Amount owed</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_amount_paid__c</fullName>
        <label>Total amount paid</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wave_APM__c</fullName>
        <label>Wave APM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave__c</fullName>
        <label>Wave</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Payroll History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Role__c</columns>
        <columns>Wave__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Cluster__c</field>
            <operation>equals</operation>
            <value>BAM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PH-{00000000}</displayFormat>
        <label>Payroll History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>